test-data/invalid/no-plural.jsx
const Test = () => (
    <PluralTranslate>
        <Singular />
    </PluralTranslate>
);
